Refactored menu generation code to be more readable, opening menu sorts by code, fixed adding item, it appears on top of table

--- a/public/styles.css
+++ b/public/styles.css
@@ -264,3 +264,8 @@ input, select{
     margin-left: auto;
     
 }
+
+#menu-container {
+    display: flex;
+    flex-direction: column;
+}
